added metod (handConstrainsViolations) to catch exceptions