@@ -9,8 +9,6 @@ import pl.sii.upskills.speaker.service.SpeakerValidationException;
 import javax.validation.ConstraintViolation;
 import javax.validation.ConstraintViolationException;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 class GlobalControllerAdvice {
@@ -19,12 +17,13 @@ class GlobalControllerAdvice {
     List<String> handlingSpeakerValidationException(SpeakerValidationException e) {
         return e.getErrors();
     }
+
     @ExceptionHandler(ConstraintViolationException.class)
     @ResponseStatus(value = HttpStatus.BAD_REQUEST)
     List<String> handConstrainsViolations(ConstraintViolationException message) {
-        //List<ConstraintViolation<?>> wyjatek = List.copyOf(message.getConstraintViolations());
-        //return wyjatek.stream().map(ConstraintViolation::getMessageTemplate).collect(Collectors.toList());
-        return message.getConstraintViolations().stream().map(ConstraintViolation::getMessageTemplate).collect(Collectors.toList());
+        return message.getConstraintViolations()
+                .stream()
+                .map(ConstraintViolation::getMessageTemplate)
+                .toList();
     }
-
 }
